--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,15 @@
+[project]
+description = "a package of five games with a mathematical bias"
+repository = "https://github.com/Sarkazm1925/python-project-49.git"
+
+
 [tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
 description = ""
 authors = ["Sarkazm <sarkazm.hexlet@gmail.com>"]
 readme = "README.md"
-packages = [
-  { include = "brain_games" },
-]
+packages = [{ include = "brain_games" }]
 
 
 [tool.poetry.dependencies]
